--- a/Index.html
+++ b/Index.html
@@ -2,25 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />"
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
     <title>Broadway Design</title>
   </head>
   <body>
     <header>
-      <h1>Broadway Design</h1>
-      <p class="top-menu">Home</p>
-      <p class="top-menu">About</p>
-      <p class="top-menu">Work</p>
-      <p class="top-menu">Team</p>
-      <p class="top-menu">Contact</p>
+      <h1 id="BroadwayDesign">Broadway Design</h1>
+      <p class="top-menu"><a href="#BroadwayDesign">Home</a></p>
+      <p class="top-menu"><a href="#Our process">About</a></p>
+      <p class="top-menu"><a href="#Portfolio">Work</a></p>
+      <p class="top-menu"><a href="#Team">Team</a></p>
+      <p class="top-menu"><a href="#Contact">Contact<a/></p>
     </header>
-    <h2>Our process</h2>
-      <img src="file:///Users/johngoliats/Desktop/Privat/Koda/Projects/Broadway%20Design/Resources/Icons/identify.svg"/>
+    <h2 id="Our process">Our process</h2>
+      <img src="file:///Users/johngoliats/Desktop/Privat/Koda/Projects/BroadwayDesign/Resources/Icons/identify.svg"/>
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
-      <img src="file:///Users/johngoliats/Desktop/Privat/Koda/Projects/Broadway%20Design/Resources/Icons/understand.svg"/>
+      <img src="file:///Users/johngoliats/Desktop/Privat/Koda/Projects/BroadwayDesign/Resources/Icons/understand.svg"/>
     <h2>Understand</h2>
       <p>We study our projects inside out</p>
-      
+      <img src="file:///Users/johngoliats/Desktop/Privat/Koda/Projects/BroadwayDesign/Resources/Icons/execute.svg" />
+    <h2>Execute</h2>
+      <p>We put everything we have into our work</p>
+    <h4>Designed in New York</h4>
+    <h2 id="Portfolio">Portfolio</h2>
+      <p>Coming soon</p>
+    <h2 id="Team">Team</h2>
+      <p>We're hiring!</p>
+    <h2 id="Contact">Contact</h2>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    <footer>
+      <p>© Broadway 2016
+        <a href="#BroadwayDesign">Home</a>
+        <a href="#Our process">About</a>
+        <a href="#Portfolio">Work</a>
+        <a href="#Team">Team</a>
+        <a href="#Contact">Contact<a/>
+    </footer>
+
   </body>
 </html>
