--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     <footer>
-      <p>© Broadway 2016
+      <p><span style="font-size:11px">© Broadway 2016</span>
         <a href="#BroadwayDesign">Home</a>
         <a href="#Our process">About</a>
         <a href="#Portfolio">Work</a>
